--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,9 @@ body, html {
 .showcase__header span {
 	color: var(--accent);
 }
+.showcase-carousel .swiper-wrapper {
+	transition: var(--transition);
+}
 
 .showcase-carousel__item {
 	position: relative;
@@ -184,6 +187,50 @@ body, html {
 .showcase-carousel__image-right .showcase-carousel__image {
 	animation: k-Right-side 2s ease-in-out infinite;
 	animation-direction: alternate;
+}
+/* Navigation */
+
+.showcase-navigation {
+	overflow: hidden;
+	position: absolute;
+	z-index: 2;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+}
+.showcase-navigation > * {
+	position: absolute;
+	height: 100%;
+	width: 50%;
+	outline: none; /* чтобы на мобильных устройствах не было рамок */
+	cursor: pointer;
+}
+.showcase-navigation__next {
+	right: 0;
+	
+}
+.showcase-navigation > *::before {
+	content: '?';
+	font-family: assassin-st;
+	opacity: 0;
+	transition: opacity .75s ease-out;
+	position: absolute;
+	transform: rotate(-90deg);
+	left: 50px;
+	top: 50%;
+	font-size: 45px;
+}
+.showcase-navigation > *:hover::before {
+	opacity: .25;
+}
+.showcase-navigation__next::before {
+	transform: rotate(90deg);
+	right: 50px;
+	left: auto;
+}
+.showcase-navigation > *.swiper-button-disabled {
+	display: none;
 }
 
 /* Animations */
